zure blob storage upload simplified and removed methods not needed